########### 2015-7-6 #################
alter table flashsale_daily_popularize_cost add column carrylog_red_packet double NOT NULL;


	########### 2015-7-4 #################
alter table shop_items_itemnumtasklog add index SH_IT_IT_INDEX(outer_id,sku_outer_id);
ALTER TABLE shop_weixin_unionid ADD INDEX IDX_UNIONID_APP_KEY (UNIONID,APP_KEY);

########### 2015-6-27 #################
alter table suplychain_flashsale_orderlist add column p_district varchar(32) default "1" NOT NULL after status;
alter table suplychain_flashsale_orderlist add column reach_standard tinyint(1) default 0 NOT NULL after p_district;

alter table xiaolumm_order_red_packet add column created datetime NOT NULL;
alter table xiaolumm_order_red_packet add column modified datetime NOT NULL;

########### 2015-6-22 #################
alter table suplychain_flashsale_orderlist add column supplier_shop varchar(32) NOT NULL after supplier_name;

########### 2015-6-15 #################
alter table django_admin_log change object_id object_id varchar(64) NOT NULL;
ALTER TABLE django_admin_log ADD INDEX IDX_OB_CO_AC_US (OBJECT_ID,CONTENT_TYPE_ID,ACTION_TIME,USER_ID);
ALTER TABLE django_admin_log ADD INDEX IDX_USER_ID_CONTENT_TYPE_ID (USER_ID,CONTENT_TYPE_ID,ACTION_TIME)

########### 2015-6-12 #################
alter table xiaolumm_xiaolumama add column hasale tinyint(1) NOT NULL;
alter table xiaolumm_xiaolumama add column charge_time datetime;

alter table flashsale_clickcount drop index date, add unique index linkid(linkid,date);
alter table flashsale_weekcount_table drop index week_code ,add unique index linkid(`linkid`,`week_code`);
########### 2015-6-10 #################
alter table suplychain_flashsale_orderdetail add column arrival_time datetime after non_arrival_quantity;

########### 2015-6-8 #################
alter table xiaolumm_xiaolumama add column progress varchar(8) NOT NULL;
CREATE INDEX `xiaolumm_xiaolumama_4ad8f7e` ON `xiaolumm_xiaolumama` (`progress`);
########### 2015-6-5 #################